Fix cropping of private blog icon

--- a/frontend/styles/topic.styl
+++ b/frontend/styles/topic.styl
@@ -9,9 +9,14 @@
     height 20px
     margin-bottom -5px
 
-.private-blog
+.private-blog:after
   background transparent url(images/lock.png) no-repeat 100% 0
-  padding-right 20px
+  margin-left 4px
+  content ""
+  display inline-block
+  vertical-align middle
+  width 16px
+  height 16px
 
 .topic-header
   position relative
